# oracle-hcm-rest-api-starter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: AUTHENTICATION.md  ENDPOINTS.md  GETTING_STARTED.md  TROUBLESHOOTING.md
examples/: 01_get_workers.py  02_get_jobs.py  03_get_departments.py  04_get_locations.py  05_get_grades.py  10_get_worker_names.py
postman/: README.md
src/hcm_client/: __init__.py  client.py  config.py  errors.py  logging_utils.py
tests/: test_client.py  test_config.py
tests/fixtures/: jobs_response.json  workers_response.json
